<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayAction"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/calc_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rost_text"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edit_text_height"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/rost_hint"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ves_text"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edit_text_weight"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/ves_hint"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_text"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edit_text_age"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/age_hint"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/phys_act"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <Spinner
        android:id="@+id/spinner_activity_level"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:drawable/editbox_background"
        android:entries="@array/activity_levels"
        android:prompt="@string/activity_level_prompt" />

    <RadioGroup
        android:id="@+id/radio_group_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radio_button_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female"
            android:textColor="@color/white" />

    </RadioGroup>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="@color/gray"
        android:padding="10dp"
        android:text="@string/calculate"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="@string/sut_norm"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32dp"
        android:textStyle="bold" />
</LinearLayout>
