<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:title="Основное"
        tools:ignore="HardcodedText">
        <menu>
            <item
                android:id="@+id/id_recipe"
                android:icon="@drawable/myrecipe"
                android:title="@string/recipe" />

            <item
                android:id="@+id/id_calory"
                android:icon="@drawable/ves"
                android:title="@string/calory" />

            <item
                android:id="@+id/id_favorite"
                android:icon="@drawable/fav"
                android:title="@string/favorite" />
        </menu>
    </item>


    <item
        android:title="Настройки"
        tools:ignore="HardcodedText">
        <menu>
            <item
                android:id="@+id/id_settings"
                android:icon="@drawable/set"
                android:title="@string/action_settings" />
        </menu>

    </item>

</menu>