<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayAction"
    tools:context=".EditActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imNewImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_addimage" />

        <ImageButton
            android:id="@+id/imEditImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:onClick="onClickChooseImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add" />

        <ImageButton
            android:id="@+id/imDeleteImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClickDeleteImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/dish_hint"
        android:inputType="textPersonName"
        android:textColor="@color/edit_text_color_state"
        app:layout_constraintBottom_toTopOf="@+id/edProducts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageContainer" />

    <EditText
        android:id="@+id/edDesc"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="4dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/recipe_hint"
        android:inputType="textMultiLine|textPersonName"
        android:textColor="@color/edit_text_color_state"
        app:layout_constraintEnd_toEndOf="@+id/edTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edTitle"
        app:layout_constraintTop_toBottomOf="@+id/edProducts" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbSaveImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/cnt_dis"
        android:focusable="true"
        android:onClick="onClickSave"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_action_save" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:clickable="true"
        android:contentDescription="@string/cnt_dis"
        android:focusable="true"
        android:onClick="onClickAddImage"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fbSaveImage"
        app:srcCompat="@drawable/ic_addimage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edProducts"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/products_hint"
        android:inputType="textMultiLine|textPersonName"
        android:textColor="@color/edit_text_color_state"
        app:layout_constraintBottom_toTopOf="@+id/edDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTitle" />

    <EditText
        android:id="@+id/edCalories"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/calory_hint"
        android:inputType="number"
        android:textColor="@color/edit_text_color_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbEditEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/cnt_dis"
        android:focusable="true"
        android:onClick="onClickEditEnable"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:hint="@string/calory_hint"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edDesc" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="onClickFav"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/cnt_dis"
        android:focusable="true"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fbEditEnable"
        app:srcCompat="@drawable/fav" />


</androidx.constraintlayout.widget.ConstraintLayout>